--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,7 @@
 @import "byweb/contents/reviews";
 @import "byweb/contents/footer";
 @import "byweb/form";
+@import "byweb/contents/etapy";
 @import "byweb/back-top";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
