fix calc module

--- a/resources/sass/byweb/calc.scss
+++ b/resources/sass/byweb/calc.scss
@@ -46,6 +46,7 @@
 .calc-row {
     display: flex;
     justify-content: space-between;
+    //justify-content: flex-start;
     flex-wrap: wrap;
     box-sizing: border-box;
 }
