--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -158,15 +158,6 @@ a {
   padding-right: 10px;
 }
 
-.error {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  color: red;
-  background-color: #f2f2f2;
-  padding: 50px;
-}
-
 .center {
   text-align: center;
 }
@@ -1334,6 +1325,11 @@ ul[id=review-list] li:first-of-type {
   color: #f6f8fa;
 }
 
+.row.black.top {
+  position: absolute;
+  bottom: 0;
+}
+
 .input {
   display: inline;
   box-sizing: border-box;
@@ -1594,4 +1590,43 @@ ul[id=review-list] li:first-of-type {
 }
 .back-top-link:hover {
   color: #FFF;
+}
+
+#photo {
+  float: left;
+}
+#photo img {
+  border-radius: 1000px;
+  margin: 20px;
+}
+#photo-right {
+  float: right;
+}
+#photo-right img {
+  margin: 20px;
+  height: 150px;
+}
+
+a[href="https://telegram.me/sozdaniesajta"] img {
+  vertical-align: middle;
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  color: red;
+  background-color: #f2f2f2;
+  padding: 50px;
+  min-height: calc(100vh - 83px);
+}
+@media screen and (max-height: 300px) {
+  .error {
+    min-height: 0px;
+    height: 100px;
+  }
+}
+.error h2 {
+  align-self: center;
+  color: #ff3841;
 }
