--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,5 +23,7 @@
 @import "byweb/form";
 @import "byweb/contents/etapy";
 @import "byweb/back-top";
+@import "byweb/contacts";
+@import "byweb/errors-front";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
