--- a/resources/sass/byweb/_variables.scss
+++ b/resources/sass/byweb/_variables.scss
@@ -1,6 +1,7 @@
 // Body
 $body-bg: #f8fafc;
 
+$height-menu: 83px;
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
