--- a/resources/sass/byweb/contents/footer.scss
+++ b/resources/sass/byweb/contents/footer.scss
@@ -82,9 +82,10 @@
     }
 }
 
-.row.black.top {
-    position: absolute;
-    bottom: 0;
-}
+//.row.black.top {
+//    //min-height: 100vh;
+//    position: absolute;
+//    bottom: 0;
+//}
 
 
