--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -28,6 +28,7 @@ html {
 body {
   font-family: "Roboto", Arial, sans-serif;
   min-width: 320px;
+  min-height: 100vh;
   background: #faf6f1;
   color: #888888;
 }
@@ -593,6 +594,7 @@ nav ul li > a:only-child:after {
 }
 
 #slider {
+  min-height: 400px;
   height: calc(100vh - 75px - 83px);
   display: flex;
   flex-wrap: wrap;
@@ -601,6 +603,7 @@ nav ul li > a:only-child:after {
 }
 
 .slider {
+  min-height: 400px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -610,6 +613,7 @@ nav ul li > a:only-child:after {
 .slider-img {
   position: absolute;
   width: 100%;
+  min-height: 400px;
   height: calc(100vh - 75px - 83px);
   background: rgb(115, 195, 232);
   background: linear-gradient(0deg, rgb(115, 195, 232) 0%, rgb(255, 255, 255) 100%);
@@ -645,6 +649,11 @@ nav ul li > a:only-child:after {
 @media screen and (max-width: 1350px) {
   .slider-item-txt {
     width: 30%;
+  }
+}
+@media screen and (max-height: 540px) {
+  .slider-item-txt {
+    transform: scale(0.8);
   }
 }
 @media screen and (max-width: 850px) {
@@ -769,7 +778,7 @@ nav ul li > a:only-child:after {
   justify-content: space-between;
 }
 .content-top-item figure {
-  flex-basis: 20%;
+  float: left;
 }
 @media screen and (max-width: 820px) {
   .content-top-item figure {
@@ -782,18 +791,13 @@ nav ul li > a:only-child:after {
   max-width: 460px;
 }
 @media screen and (max-width: 820px) {
-  .content-top-item img {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 820px) {
   .content-top-item {
     flex-wrap: wrap;
   }
 }
 
 .content-top-item-txt {
-  flex-basis: 80%;
+  flex-basis: 100%;
 }
 @media screen and (max-width: 820px) {
   .content-top-item-txt {
@@ -940,17 +944,18 @@ nav ul li > a:only-child:after {
   padding: 30px;
 }
 
+.calc {
+  padding-top: 30px;
+}
 .calc h2 {
   text-align: center;
   color: #444;
 }
-
 .calc-desc {
   text-align: center;
   color: #444;
   padding-bottom: 10px;
 }
-
 .calc-descprice {
   display: flex;
   box-sizing: border-box;
@@ -980,38 +985,39 @@ nav ul li > a:only-child:after {
   border-top: 1px solid #eee;
   text-align: center;
 }
-
 .calc-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
   box-sizing: border-box;
 }
-
 .calc-item {
-  box-sizing: border-box;
-  width: calc(25% - 10px);
-  padding-top: 5px;
-  margin-right: 10px;
-  margin-top: 10px;
+  flex-basis: 25%;
+  padding: 0 5px 0 10px;
+  margin-bottom: 10px;
+  min-width: 25%;
 }
 .calc-item:last-child {
   margin-right: 0px;
 }
 @media screen and (max-width: 1497px) {
   .calc-item {
-    width: 32%;
+    width: 33.3333333333%;
+    min-width: 33.3333333333%;
   }
 }
 @media screen and (max-width: 1000px) {
   .calc-item {
-    width: 49%;
+    width: 50%;
+    min-width: 50%;
     margin-right: 0px;
   }
 }
 @media screen and (max-width: 700px) {
   .calc-item {
     width: 100%;
+    min-width: 100%;
   }
 }
 .calc-item h4 {
@@ -1027,13 +1033,17 @@ nav ul li > a:only-child:after {
 .calc-item h4:hover {
   background: #2f343a;
 }
-
 .calc-price {
   background: #6dd4b2;
   text-align: center;
   padding: 15px;
   color: #FFF;
   font-size: 1.8rem;
+  cursor: pointer;
+}
+.calc-price a {
+  color: #FFF;
+  text-decoration: none;
 }
 
 /*animation arrow - strelka*/
@@ -1325,9 +1335,10 @@ ul[id=review-list] li:first-of-type {
   color: #f6f8fa;
 }
 
-.row.black.top {
-  position: absolute;
-  bottom: 0;
+.form-order {
+  color: #6dd4b2;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .input {
@@ -1618,7 +1629,7 @@ a[href="https://telegram.me/sozdaniesajta"] img {
   color: red;
   background-color: #f2f2f2;
   padding: 50px;
-  min-height: calc(100vh - 83px);
+  min-height: 100vh;
 }
 @media screen and (max-height: 300px) {
   .error {
