--- a/resources/sass/byweb/contents/top.scss
+++ b/resources/sass/byweb/contents/top.scss
@@ -17,7 +17,9 @@
     justify-content: space-between;
 
     figure {
-        flex-basis: 20%;
+        //flex-basis: 20%;
+
+        float:left;
 
         @media screen and (max-width: 820px) {
             flex-basis: 100%;
@@ -31,9 +33,9 @@
 
     img {
         max-width: 460px;
-        @media screen and (max-width: 820px) {
-            width: 100%;
-        }
+        //@media screen and (max-width: 820px) {
+        //    width: 100%;
+        //}
     }
 
 
@@ -45,8 +47,8 @@
 
 .content-top-item-txt {
 
-    flex-basis: 80%;
-
+    //flex-basis: 80%;
+flex-basis: 100%;
     @media screen and (max-width: 820px) {
 
         flex-basis: 100%;
