--- a/resources/sass/byweb/form.scss
+++ b/resources/sass/byweb/form.scss
@@ -1,3 +1,22 @@
+
+.form {
+
+    &-order {
+
+        color: $green;
+        font-size: 1.5rem;
+        font-weight: bold;
+
+
+
+
+    }
+
+
+
+}
+
+
 .input {
     display: inline;
     box-sizing: border-box;
@@ -170,3 +189,5 @@
         left: 0;
     }
 }
+
+
