fix vue form for feedback

--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -1341,6 +1341,11 @@ ul[id=review-list] li:first-of-type {
   font-weight: bold;
 }
 
+.input.check input:focus, .textarea.check textarea:focus {
+  border-color: #6dd4b2;
+  color: #5fa6aa;
+}
+
 .input {
   display: inline;
   box-sizing: border-box;
