--- a/resources/sass/byweb/cleaner.scss
+++ b/resources/sass/byweb/cleaner.scss
@@ -5,3 +5,11 @@
     box-sizing: border-box;
 }
 a {text-decoration: none;}
+
+li {
+    list-style-type: none; /* Убираем маркеры */
+}
+ul {
+    margin-left: 0; /* Отступ слева в браузере IE и Opera */
+    padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+}
