--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,5 +25,7 @@
 @import "byweb/back-top";
 @import "byweb/contacts";
 @import "byweb/errors-front";
+@import "byweb/contents/bottom";
+@import "byweb/breadcrumbs";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
