--- a/resources/sass/byweb/contents/top.scss
+++ b/resources/sass/byweb/contents/top.scss
@@ -1,5 +1,9 @@
 .content-top {
 
+
+    @include list;
+
+
     strong {
         color: $pink;
     }
@@ -46,7 +50,7 @@
 }
 
 .content-top-item-txt {
-
+//display: flex;
     //flex-basis: 80%;
 flex-basis: 100%;
     @media screen and (max-width: 820px) {
@@ -72,4 +76,9 @@ flex-basis: 100%;
         vertical-align: middle;
     }
 }
+
+.right_figure figure {
+    float:right
+}
+
 
