Create tabs for moddule

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,5 +23,10 @@
 @import "byweb/form";
 @import "byweb/contents/etapy";
 @import "byweb/back-top";
+@import "byweb/contacts";
+@import "byweb/errors-front";
+@import "byweb/contents/bottom";
+@import "byweb/breadcrumbs";
+@import "byweb/contents/tabs/top-tabs";
 //// Bootstrap
 //@import '~bootstrap/scss/bootstrap';
