--- a/resources/sass/byweb/_variables.scss
+++ b/resources/sass/byweb/_variables.scss
@@ -1,6 +1,7 @@
 // Body
 $body-bg: #f8fafc;
 
+
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
@@ -19,6 +20,7 @@ $red: #ff3841;
 $orange: #d07f60;
 $yellow: #ffed4a;
 $green: #6dd4b2;
+$green2: #26acc5;
 $green-dark: #5fa6aa;
 $cyan: #6cb2eb;
 $white: #FFF;
