--- a/public/tpl/byweb/css/template.css
+++ b/public/tpl/byweb/css/template.css
@@ -10,6 +10,15 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style-type: none; /* Убираем маркеры */
+}
+
+ul {
+  margin-left: 0; /* Отступ слева в браузере IE и Opera */
+  padding-left: 0; /* Отступ слева в браузере Firefox, Safari, Chrome */
+}
+
 html {
   overflow-x: hidden;
   font-size: 18px;
@@ -28,6 +37,7 @@ html {
 body {
   font-family: "Roboto", Arial, sans-serif;
   min-width: 320px;
+  min-height: 100vh;
   background: #faf6f1;
   color: #888888;
 }
@@ -118,7 +128,7 @@ a {
   padding: 50px;
 }
 
-.block {
+.block, .display {
   position: relative;
   display: block;
   z-index: 1;
@@ -145,8 +155,16 @@ a {
   padding-top: 50px;
 }
 
+.pb-20 {
+  padding-bottom: 20px;
+}
+
 .pb-30 {
   padding-bottom: 30px;
+}
+
+.pb-40 {
+  padding-bottom: 40px;
 }
 
 .py-50 {
@@ -156,15 +174,6 @@ a {
 .px-10 {
   padding-left: 10px;
   padding-right: 10px;
-}
-
-.error {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  color: red;
-  background-color: #f2f2f2;
-  padding: 50px;
 }
 
 .center {
@@ -191,6 +200,10 @@ a {
     flex-basis: 100%;
   }
 }
+.right_figure figure {
+  float: right;
+}
+
 .btn, .btn-slider {
   display: inline-block;
   position: relative;
@@ -602,6 +615,7 @@ nav ul li > a:only-child:after {
 }
 
 #slider {
+  min-height: 400px;
   height: calc(100vh - 75px - 83px);
   display: flex;
   flex-wrap: wrap;
@@ -610,6 +624,7 @@ nav ul li > a:only-child:after {
 }
 
 .slider {
+  min-height: 400px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -619,6 +634,7 @@ nav ul li > a:only-child:after {
 .slider-img {
   position: absolute;
   width: 100%;
+  min-height: 400px;
   height: calc(100vh - 75px - 83px);
   background: rgb(115, 195, 232);
   background: linear-gradient(0deg, rgb(115, 195, 232) 0%, rgb(255, 255, 255) 100%);
@@ -654,6 +670,11 @@ nav ul li > a:only-child:after {
 @media screen and (max-width: 1350px) {
   .slider-item-txt {
     width: 30%;
+  }
+}
+@media screen and (max-height: 540px) {
+  .slider-item-txt {
+    transform: scale(0.8);
   }
 }
 @media screen and (max-width: 850px) {
@@ -764,6 +785,18 @@ nav ul li > a:only-child:after {
   }
 }
 
+.content-top li {
+  margin-left: 30px;
+  padding-bottom: 5px;
+}
+.content-top li::before {
+  position: absolute;
+  content: "\f107";
+  font-family: FontAwesome;
+  color: red;
+  left: 10px;
+  font-weight: bold;
+}
 .content-top strong {
   color: #fe7676;
 }
@@ -778,7 +811,7 @@ nav ul li > a:only-child:after {
   justify-content: space-between;
 }
 .content-top-item figure {
-  flex-basis: 20%;
+  float: left;
 }
 @media screen and (max-width: 820px) {
   .content-top-item figure {
@@ -791,18 +824,13 @@ nav ul li > a:only-child:after {
   max-width: 460px;
 }
 @media screen and (max-width: 820px) {
-  .content-top-item img {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 820px) {
   .content-top-item {
     flex-wrap: wrap;
   }
 }
 
 .content-top-item-txt {
-  flex-basis: 80%;
+  flex-basis: 100%;
 }
 @media screen and (max-width: 820px) {
   .content-top-item-txt {
@@ -822,6 +850,10 @@ nav ul li > a:only-child:after {
 }
 .top-menu-item img {
   vertical-align: middle;
+}
+
+.right_figure figure {
+  float: right;
 }
 
 .why-us {
@@ -949,17 +981,21 @@ nav ul li > a:only-child:after {
   padding: 30px;
 }
 
+.calc {
+  padding-top: 40px;
+  padding-bottom: 30px;
+  background: url("/tpl/byweb/img/mainbottomBg.jpg");
+  background-attachment: fixed;
+}
 .calc h2 {
   text-align: center;
   color: #444;
 }
-
 .calc-desc {
   text-align: center;
   color: #444;
   padding-bottom: 10px;
 }
-
 .calc-descprice {
   display: flex;
   box-sizing: border-box;
@@ -989,38 +1025,40 @@ nav ul li > a:only-child:after {
   border-top: 1px solid #eee;
   text-align: center;
 }
-
 .calc-row {
+  padding: 24px 0 15px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
   box-sizing: border-box;
 }
-
 .calc-item {
-  box-sizing: border-box;
-  width: calc(25% - 10px);
-  padding-top: 5px;
-  margin-right: 10px;
-  margin-top: 10px;
+  flex-basis: 25%;
+  padding: 0 5px 0 10px;
+  margin-bottom: 10px;
+  min-width: 25%;
 }
 .calc-item:last-child {
   margin-right: 0px;
 }
 @media screen and (max-width: 1497px) {
   .calc-item {
-    width: 32%;
+    width: 33.3333333333%;
+    min-width: 33.3333333333%;
   }
 }
 @media screen and (max-width: 1000px) {
   .calc-item {
-    width: 49%;
+    width: 50%;
+    min-width: 50%;
     margin-right: 0px;
   }
 }
 @media screen and (max-width: 700px) {
   .calc-item {
     width: 100%;
+    min-width: 100%;
   }
 }
 .calc-item h4 {
@@ -1036,13 +1074,17 @@ nav ul li > a:only-child:after {
 .calc-item h4:hover {
   background: #2f343a;
 }
-
 .calc-price {
   background: #6dd4b2;
   text-align: center;
   padding: 15px;
   color: #FFF;
   font-size: 1.8rem;
+  cursor: pointer;
+}
+.calc-price a {
+  color: #FFF;
+  text-decoration: none;
 }
 
 /*animation arrow - strelka*/
@@ -1161,7 +1203,7 @@ label, select, button, input[type=button], input[type=reset], input[type=submit]
   vertical-align: middle;
 }
 
-.how-we-work {
+.top-tabbs {
   background: #f6f8fa;
 }
 
@@ -1332,6 +1374,17 @@ ul[id=review-list] li:first-of-type {
 }
 #footer-phone a:hover {
   color: #f6f8fa;
+}
+
+.form-order {
+  color: #6dd4b2;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.input.check input:focus, .textarea.check textarea:focus {
+  border-color: #6dd4b2;
+  color: #5fa6aa;
 }
 
 .input {
@@ -1594,4 +1647,123 @@ ul[id=review-list] li:first-of-type {
 }
 .back-top-link:hover {
   color: #FFF;
+}
+
+#photo {
+  float: left;
+}
+#photo img {
+  border-radius: 1000px;
+  margin: 20px;
+}
+#photo-right {
+  float: right;
+}
+#photo-right img {
+  margin: 20px;
+  height: 150px;
+}
+
+a[href="https://telegram.me/sozdaniesajta"] img {
+  vertical-align: middle;
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  color: red;
+  background-color: #f2f2f2;
+  padding: 50px;
+  min-height: 100vh;
+}
+@media screen and (max-height: 300px) {
+  .error {
+    min-height: 0px;
+    height: 100px;
+  }
+}
+.error h2 {
+  align-self: center;
+  color: #ff3841;
+}
+
+#content-bottom {
+  background: #f6f8fa;
+}
+#content-bottom li {
+  margin-left: 30px;
+  padding-bottom: 5px;
+}
+#content-bottom li::before {
+  position: absolute;
+  content: "\f107";
+  font-family: FontAwesome;
+  color: red;
+  left: 10px;
+  font-weight: bold;
+}
+
+.body_bg {
+  background: #faf6f1 !important;
+}
+
+.breadcrumbs {
+  background: linear-gradient(0deg, rgb(232, 227, 227) 0%, rgb(250, 246, 241) 52%);
+  padding: 5px 0 5px;
+  text-align: center;
+  font-size: 18px;
+  border-radius: 5px;
+  border-bottom: 1px solid #999;
+}
+.breadcrumbs a {
+  text-decoration: none;
+}
+
+.top-tabs-header h3 {
+  text-transform: uppercase;
+}
+.top-tabs-item-header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: #26acc5;
+  color: #FFF;
+  padding: 10px 20px 10px 40px;
+  border-bottom: 1px solid #FFF;
+  cursor: pointer;
+}
+.top-tabs-item-title {
+  flex-basis: calc(100% - 50px);
+  align-self: center;
+}
+.top-tabs-item-txt {
+  padding: 20px 20px;
+  display: none;
+}
+.top-tabs-item-txt img {
+  max-width: 100%;
+  margin: 20px 0px;
+}
+.top-tabs-icon {
+  position: relative;
+  flex-basis: 50px;
+  height: 50px;
+  background: #FFF;
+  border-radius: 1000px;
+  color: #fe7676;
+  font-weight: bold;
+  align-self: center;
+}
+.top-tabs-icon i {
+  position: absolute;
+  font-weight: bold;
+  top: 17.5px;
+  left: 17.5px;
+}
+
+.block, .display {
+  position: relative;
+  display: block;
+  z-index: 1;
 }
