--- a/resources/sass/byweb/contents/top.scss
+++ b/resources/sass/byweb/contents/top.scss
@@ -1,5 +1,9 @@
 .content-top {
 
+
+    @include list;
+
+
     strong {
         color: $pink;
     }
@@ -17,7 +21,9 @@
     justify-content: space-between;
 
     figure {
-        flex-basis: 20%;
+        //flex-basis: 20%;
+
+        float:left;
 
         @media screen and (max-width: 820px) {
             flex-basis: 100%;
@@ -31,9 +37,9 @@
 
     img {
         max-width: 460px;
-        @media screen and (max-width: 820px) {
-            width: 100%;
-        }
+        //@media screen and (max-width: 820px) {
+        //    width: 100%;
+        //}
     }
 
 
@@ -44,9 +50,9 @@
 }
 
 .content-top-item-txt {
-
-    flex-basis: 80%;
-
+//display: flex;
+    //flex-basis: 80%;
+flex-basis: 100%;
     @media screen and (max-width: 820px) {
 
         flex-basis: 100%;
@@ -70,3 +76,9 @@
         vertical-align: middle;
     }
 }
+
+.right_figure figure {
+    float:right
+}
+
+
