--- a/resources/sass/byweb/template.scss
+++ b/resources/sass/byweb/template.scss
@@ -1,5 +1,3 @@
-
-
 html {
     overflow-x: hidden;
     font-size: 18px;
@@ -12,13 +10,6 @@ html {
     }
 
 }
-
-//#app {
-//    display: flex;
-//    flex-flow: column;
-//    //flex-wrap: wrap;
-//    min-height: 100vh;
-//}
 
 body {
     font-family: 'Roboto', Arial, sans-serif;
@@ -39,8 +30,6 @@ h1, h2, h3 {
     color: $black;
 }
 
-
-
 h1, h2  {
     text-transform: uppercase;
 }
@@ -60,16 +49,11 @@ p {
     margin: 25px 0;
 }
 
-
-
 .container {
     position: relative;
     max-width: 1490px;
     margin: 0 auto;
     padding: 0 25px;
-
-
-
 }
 
 .row {
@@ -91,7 +75,7 @@ p {
 
 a {
     color: $indigo;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .item-1 {
